Update on November 10, 2020

--- a/03-method.Rmd
+++ b/03-method.Rmd
@@ -1,3 +1,88 @@
 # Methods
+## Deep Learning
+### Overview
+* What is deep learning?
+Input to output via layers of representation
 
-We describe our methods in this chapter.
+* What are layers?
+A layer is a geometric transformation function on the data that goes through it 
+Weights determine the data transformation behavior of a layer
+
+Learning Representation \
+* Transforming input data into useful representation \
+
+The "deep" in deep learning \
+* multiple layers \
+* Other possibly more appropriate names for the field:\
+    + Layered representations learning \
+    + Hierarchical representations learning \
+    + Chained geometric transformation learning \
+
+New problem domains for R: \
+- Computer vision \
+- Computer speech recognition \
+- Reinforcement learning applications \
+
+How do we train deep learning models? \
+* Basic of machine learning algorithms \
+* Machine learning vs. statistical modeling\
+* MNIST example \
+    - Model definition in R \
+    - Layers of representation \
+* The training loop \
+
+Machine learning algorithms \
+Learning model parameters via exposure to many example data points \
+
+Statistics: Often focused on inferring the process by which data is generated \
+Machine Learning: Principally focused on predicting future data \
+
+Deep learning frontiers \
+* Computer vision \
+* Natural language processing \
+* Time series \
+* Biomedical \
+
+\newpage
+
+### Tensor Flow and R
+TensorFlow APIs \
+* Keras API \
+* Estimator API \
+* Core API \
+
+R packages \ 
+TensorFlow APIs \ 
+* keras - Interface for neural networks, with a focus on enabling fast experimentation. \
+* tfestimators - Implementations of common model types such as regressors and classifiers. \ 
+* tensorflow - Low-level interface to the TensorFlow computational graph. \
+* tfdatasets - Scalable input pipelines for TensorFlow models.\
+
+Supporting Tools \ 
+* tfruns - Track , visualize, and manage TensorFlow training runs and experiments \
+* tfdeploy - Tools designed to make exporting and serving TensorFlow models straightforward. \
+* cloudml - R interface to Google Cloud Machine Learning Engine. \ 
+
+R interface to Keras \
+* Step-by-step example \
+* Keras layers \
+* Compiling models \
+* Losses, optimizer, and metrics \
+* More examples \
+
+\newpage
+
+#### Keras layers
+
+
+
+
+
+
+
+
+
+
+
+
+    
