--- a/index.Rmd
+++ b/index.Rmd
@@ -4,10 +4,11 @@ author: "Yihui Xie"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
+output: bookdown::gitbook
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+description: "This is a guide on how to conduct a data analysis routine"
 ---
 
 # Prerequisites
