Update on November 10, 2020

--- a/packages.bib
+++ b/packages.bib
@@ -12,15 +12,15 @@
   author = {Yihui Xie},
   year = {2020},
   note = {R package version 0.21},
-  url = {https://CRAN.R-project.org/package=bookdown},
+  url = {https://github.com/rstudio/bookdown},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2020},
-  note = {R package version 1.29},
-  url = {https://CRAN.R-project.org/package=knitr},
+  note = {R package version 1.30},
+  url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-rmarkdown,
@@ -28,7 +28,7 @@
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2020},
   note = {R package version 2.5},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  url = {https://github.com/rstudio/rmarkdown},
 }
 
 @Book{bookdown2016,
