Update on November 11, 2020

--- a/05-advanced-methods.Rmd
+++ b/05-advanced-methods.Rmd
@@ -1,6 +1,15 @@
-# Methods
+---
+date: "`r Sys.Date()`"
+
+---
+
+# Advanced Methods
+## Imputation (Missing Data)
+
 ## Deep Learning
 ### Overview
+This section is based on [@TensorFlow]\
+![](https://www.youtube.com/watch?v=atiYXm7JZv0&ab_channel=RStudio)
 * What is deep learning?
 Input to output via layers of representation
 
@@ -27,8 +36,8 @@ How do we train deep learning models? \
 * Basic of machine learning algorithms \
 * Machine learning vs. statistical modeling\
 * MNIST example \
-    - Model definition in R \
-    - Layers of representation \
+|    - Model definition in R \
+|    - Layers of representation \
 * The training loop \
 
 Machine learning algorithms \
@@ -65,7 +74,7 @@ Supporting Tools \
 
 R interface to Keras \
 * Step-by-step example \
-* Keras layers \
+* [Keras layers] \
 * Compiling models \
 * Losses, optimizer, and metrics \
 * More examples \
@@ -73,12 +82,24 @@ R interface to Keras \
 \newpage
 
 #### Keras layers
+65 layers available\
+* Dense layers: classic "fully connected" neural network layers \
+* Convolutional layers: "Filters for learning local patterns in data \
+* Recurrent layers: Layers that maintain state based on on previously seen data \
+* Embedding layers: Vectorization of text that reflects semantic relationships between words
 
 
+### Compiling models
+Model compilation prepares the model for training by:
+1. Converting the layers into a TensorFlow graph
+2. Applying the specified loss function and optimizer
+3. Arranging for the collection of metrics during training
+
+### Losses, Optimizers, and metrics
+All available at Keras for R [cheatsheet](https://github.com/rstudio/cheatsheets/raw/master/keras.pdf)
 
 
-
-
+Example of[ Image classificaiton](https://blogs.rstudio.com/ai/posts/2017-12-14-image-classification-on-small-datasets/)
 
 
 
