--- a/packages.bib
+++ b/packages.bib
@@ -31,6 +31,13 @@
   url = {https://github.com/rstudio/rmarkdown},
 }
 
+@Manual{TensorFlow,
+  title = {Machine Learning with R and TensorFlow},
+  author = {J.J. Allaire},
+  year = {2018},
+  url = {https://www.youtube.com/watch?v=atiYXm7JZv0&ab_channel=RStudio},
+}
+
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
   author = {Yihui Xie},
@@ -51,6 +58,8 @@
   note = {ISBN 978-1498716963},
   url = {https://yihui.org/knitr/},
 }
+
+
 
 @InCollection{knitr2014,
   booktitle = {Implementing Reproducible Computational Research},
