--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,9 +1,20 @@
 # Introduction {#intro}
 
 This guide is an attempt to streamline and demystify the data analysis process. \
-By no mean this is an ultimate guide, or I am a great source of knowledge, or I claim myself as a statistician/data analyst/econometrician (or any fancy name we have now), but I am a strong proponent of learning by teaching. Hence, this is more like a learning experience for both you and me. \
+By no mean this is an ultimate guide, or I am a great source of knowledge, or I claim myself as a statistician/data analyst/econometrician (or any fancy name we have now), but I am a strong proponent of learning by teaching. Hence, this is more like a learning experience for both you and me.  
+
 <br>
 Since the beginning of the century, we have been bombarded with amazing advancements and inventions, especially in the field of statistics, information technology, and computer science. However, I believe the downside of this introduction is that we use **big** and **trendy** words too often (i.e., big data, machine learning, deep learning). \
-It's all fun and exciting when I learned these new tools. But I have to admit that I hardly retain any of these new inventions.However, writing down from the beginning till the end of a data analysis process is the solution that I came up with. Accordingly, let's dive right in. \
-The more you practice, more line of codes that you write, more function that you memorize, I think the more you will like this journey.
+It's all fun and exciting when I learned these new tools. But I have to admit that I hardly retain any of these new inventions.However, writing down from the beginning till the end of a data analysis process is the solution that I came up with. Accordingly, let's dive right in.  
+
+The more you practice, more line of codes that you write, more function that you memorize, I think the more you will like this journey.  
+
+Information in this book are from various sources, but the skeleton is based on several courses that I have taken formally. I'd like to give professors credit accordingly.  
+
+Course | Professor
+---|---
+Data Analysis I | Erin M. Schliep
+Applied Econometric | Alyssa Carlson  
+Bayesian | Sounak Chakraborty
+
 
