--- a/08-Appendix.Rmd
+++ b/08-Appendix.Rmd
@@ -30,5 +30,24 @@ instead of using `i in 1:length(object)`:
 `for (i in seq_along(object))`\
 apply multiple function:
 `map_dbl`\
-apply multiple function to multiple variables:`map2`
+apply multiple function to multiple variables:`map2`  
+`autoplot(data)`  plot times series data  
+`mod_tidy = linear(reg) %>% set_engine('lm') %>% fit(price ~ ., data=data)` fit lm model. It could also fit other models (stan, spark, glmnet, keras)  
+
+## Citation
+
+include a citation by `[@Farjam_2015]`  
+
+cite packages used in this session
+
+`package=ls(sessionInfo()$loadedOnly) for (i in package){print(toBibtex(citation(i)))}`
+```{r, eval=FALSE}
+package=ls(sessionInfo()$loadedOnly) 
+for (i in package){
+    print(toBibtex(citation(i)))
+    }
+```
+
+
+
 
