--- a/08-Appendix.Rmd
+++ b/08-Appendix.Rmd
@@ -34,6 +34,9 @@ apply multiple function to multiple variables:`map2`
 `autoplot(data)`  plot times series data  
 `mod_tidy = linear(reg) %>% set_engine('lm') %>% fit(price ~ ., data=data)` fit lm model. It could also fit other models (stan, spark, glmnet, keras)  
 
+
+ * Sometimes, data-masking will not be able to recognize whether you're calling from environment or data variables. To bypass this, we use `.data$variable` or `.env$variable`. For example `data %>% mutate(x=.env$variable/.data$variable`
+
 ## Citation
 
 include a citation by `[@Farjam_2015]`  
