--- a/references.bib
+++ b/references.bib
@@ -11,3 +11,99 @@
 	journal = {The International Journal of Management Science and Business Administration}
 }
 
+@article{Looney_1985,
+	doi = {10.2307/2683917},
+	url = {https://doi.org/10.2307%2F2683917},
+	year = 1985,
+	month = {feb},
+	publisher = {{JSTOR}},
+	volume = {39},
+	number = {1},
+	pages = {75},
+	author = {Stephen W. Looney and Thomas R. Gulledge},
+	title = {Use of the Correlation Coefficient with Normal Probability Plots},
+	journal = {The American Statistician}
+}
+
+@article{Shapiro_1972,
+	doi = {10.1080/01621459.1972.10481232},
+	url = {https://doi.org/10.1080%2F01621459.1972.10481232},
+	year = 1972,
+	month = {mar},
+	publisher = {Informa {UK} Limited},
+	volume = {67},
+	number = {337},
+	pages = {215--216},
+	author = {S. S. Shapiro and R. S. Francia},
+	title = {An Approximate Analysis of Variance Test for Normality},
+	journal = {Journal of the American Statistical Association}
+}
+
+@article{Shapiro_1965,
+	doi = {10.2307/2333709},
+	url = {https://doi.org/10.2307%2F2333709},
+	year = 1965,
+	month = {dec},
+	publisher = {{JSTOR}},
+	volume = {52},
+	number = {3/4},
+	pages = {591},
+	author = {S. S. Shapiro and M. B. Wilk},
+	title = {An Analysis of Variance Test for Normality (Complete Samples)},
+	journal = {Biometrika}
+}
+
+@article{Anderson_1952,
+	doi = {10.1214/aoms/1177729437},
+	url = {https://doi.org/10.1214%2Faoms%2F1177729437},
+	year = 1952,
+	month = {jun},
+	publisher = {Institute of Mathematical Statistics},
+	volume = {23},
+	number = {2},
+	pages = {193--212},
+	author = {T. W. Anderson and D. A. Darling},
+	title = {Asymptotic Theory of Certain "Goodness of Fit" Criteria Based on Stochastic Processes},
+	journal = {The Annals of Mathematical Statistics}
+}
+
+@article{Marsaglia_2004,
+	doi = {10.18637/jss.v009.i02},
+	url = {https://doi.org/10.18637%2Fjss.v009.i02},
+	year = 2004,
+	publisher = {Foundation for Open Access Statistic},
+	volume = {9},
+	number = {2},
+	author = {George Marsaglia and John Marsaglia},
+	title = {Evaluating the Anderson-Darling Distribution},
+	journal = {Journal of Statistical Software}
+}
+
+@article{Stephens_1974,
+	doi = {10.1080/01621459.1974.10480196},
+	url = {https://doi.org/10.1080%2F01621459.1974.10480196},
+	year = 1974,
+	month = {sep},
+	publisher = {Informa {UK} Limited},
+	volume = {69},
+	number = {347},
+	pages = {730--737},
+	author = {M. A. Stephens},
+	title = {{EDF} Statistics for Goodness of Fit and Some Comparisons},
+	journal = {Journal of the American Statistical Association}
+}
+
+@article{Bera_1981,
+	doi = {10.1016/0165-1765(81)90035-5},
+	url = {https://doi.org/10.1016%2F0165-1765%2881%2990035-5},
+	year = 1981,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {7},
+	number = {4},
+	pages = {313--318},
+	author = {Anil K. Bera and Carlos M. Jarque},
+	title = {Efficient tests for normality, homoscedasticity and serial independence of regression residuals},
+	journal = {Economics Letters}
+}
+
