Update November 15th, 2020

--- a/02-descriptive-stat.Rmd
+++ b/02-descriptive-stat.Rmd
@@ -169,19 +169,22 @@ $A^2=\int_{-\infty}^{\infty}(F_n(t)=F(t))^2\frac{dF(t)}{F(t)(1-F(t))}$
  where $p_i=\Phi(\frac{y_{(i)}-\bar{y}}{s})$, the probability that a standard normal variable is less than $\frac{y_{(i)}-\bar{y}}{s}$
  
  * Reject normal assumption when $A^2$ is too large
- * Evaluate the null hypothesis that the observations are randomly selected from a normal population based on the critical value provided by [@Marsaglia_2004] and [@Stephens_1974]
+ * Evaluate the null hypothesis that the observations are randomly selected from a normal population based on the critical value provided by [@Marsaglia_2004] and [@Stephens_1974]  
+ 
  
  * This test can be applied to other distributions:  
-  + Exponential
-  + Logistic
-  + Gumbel
-  + Extreme-value
-  + Weibull: log(Weibull) = Gumbel
-  + Gamma
-  + Logistic
-  + Cauchy
-  + von Mises
-  + Log-normal (two-parameter)
+ 
+  + Exponential  
+  + Logistic  
+  + Gumbel  
+  + Extreme-value  
+  + Weibull: log(Weibull) = Gumbel  
+  + Gamma  
+  + Logistic  
+  + Cauchy  
+  + von Mises  
+  + Log-normal (two-parameter)  
+  
  Consult [@Stephens_1974] for more detailed transformation and critical values.
  
  
@@ -207,7 +210,7 @@ $S=\frac{\hat{\mu_3}}{\hat{\sigma}^3}=\frac{\sum_{i=1}^{n}(x_i-\bar{x})^3/n}{(\s
 
 $K=\frac{\hat{\mu_4}}{\hat{\sigma}^4}=\frac{\sum_{i=1}^{n}(x_i-\bar{x})^4/n}{(\sum_{i=1}^{n}(x_i-\bar{x})^2/n)^2}$
 
-recall $\hat{\sigma^2}}$ is the estimate of the second central moment (variance) $\hat{\mu_3}$ and $\hat{\mu_4}$ are the estimates of third and fourth central moments.
+recall $\hat{\sigma^2}$ is the estimate of the second central moment (variance) $\hat{\mu_3}$ and $\hat{\mu_4}$ are the estimates of third and fourth central moments.
 
 
 If the data comes from a normal distribution, the JB statistic asymptotically has a chi-squared distribution with two degrees of freedom.  
